WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76403
Web Inspector: ConsoleMessage.cpp and InspectorResourceAgent.cpp doesn't conform to Inspector.json
https://bugs.webkit.org/show_bug.cgi?id=76403
Summary
Web Inspector: ConsoleMessage.cpp and InspectorResourceAgent.cpp doesn't conf...
Peter Rybin
Reported
2012-01-16 13:05:09 PST
Source/WebCore/inspector/ConsoleMessage.cpp:121 "other" is not declared as enum constant (C++ TypeBuilder::Console::ConsoleMessage::Type) Source/WebCore/inspector/InspectorResourceAgent.cpp:179 "response" is not an optional field (in C++ TypeBuilder::Network::Response)
Attachments
Patch
(2.50 KB, patch)
2012-01-17 02:54 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(63.92 KB, patch)
2012-01-17 07:13 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(3.43 KB, patch)
2012-01-17 07:25 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-01-17 02:54:54 PST
Created
attachment 122744
[details]
Patch
Pavel Feldman
Comment 2
2012-01-17 06:27:24 PST
Comment on
attachment 122744
[details]
Patch You should modify Inspector-0.1.json as well. I wonder why backwards compatibility check did not trigger.
Yury Semikhatsky
Comment 3
2012-01-17 07:13:36 PST
Created
attachment 122763
[details]
Patch
Yury Semikhatsky
Comment 4
2012-01-17 07:15:23 PST
(In reply to
comment #2
)
> (From update of
attachment 122744
[details]
) > You should modify Inspector-0.1.json as well. I wonder why backwards compatibility check did not trigger.
Done. Filed a bug about the compatibility check:
https://bugs.webkit.org/show_bug.cgi?id=76452
Pavel Feldman
Comment 5
2012-01-17 07:22:37 PST
Comment on
attachment 122763
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=122763&action=review
> Source/WebCore/inspector/Inspector-0.1.json:1 > {
The only change to the Inspector-0.1.json we accept are the ones where we know that the behavior of the tool on the date of the Inspector-0.1.json forking did not conform it already.
> Source/WebCore/inspector/Inspector-0.1.json:9 > + "name": "enable",
Not all of the browsers supporting 0.1 have these methods, so you should not add them.
Yury Semikhatsky
Comment 6
2012-01-17 07:25:02 PST
Created
attachment 122766
[details]
Patch
Yury Semikhatsky
Comment 7
2012-01-17 07:30:01 PST
Committed
r105154
: <
http://trac.webkit.org/changeset/105154
>
Yury Semikhatsky
Comment 8
2012-01-17 07:32:28 PST
Comment on
attachment 122766
[details]
Patch Clearing flags from landed patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug