third_party/WebKit/Source/WebCore/inspector/ConsoleMessage.cpp
@@ -119,7 +119,7 @@ static String messageTypeValue(MessageType type)
     case EndGroupMessageType: return "endGroup";
     case AssertMessageType: return "assert";
     }
-    return "other";
+    return "log";
 }
 
 static String messageLevelValue(MessageLevel level)
